--- a/appsscript.json
+++ b/appsscript.json
@@ -1,35 +1,28 @@
 {
   "timeZone": "Australia/Sydney",
   "dependencies": {
-    "enabledAdvancedServices": [
-      {
-        "userSymbol": "Calendar",
-        "serviceId": "calendar",
-        "version": "v3"
-      },
-      {
-        "userSymbol": "Drive",
-        "serviceId": "drive",
-        "version": "v2"
-      },
-      {
-        "userSymbol": "Docs",
-        "serviceId": "docs",
-        "version": "v1"
-      },
-      {
-        "userSymbol": "Sheets",
-        "serviceId": "sheets",
-        "version": "v4"
-      }
-    ],
-    "libraries": [
-      {
-        "userSymbol": "wbLib",
-        "version": "6",
-        "libraryId": "1oLToj6noRZvFkLNP3-0vWRK1BJNHO9bie3gAHi81qSF3vWrlJMOTRFzG"
-      }
-    ]
+    "enabledAdvancedServices": [{
+      "userSymbol": "Calendar",
+      "serviceId": "calendar",
+      "version": "v3"
+    }, {
+      "userSymbol": "Drive",
+      "serviceId": "drive",
+      "version": "v2"
+    }, {
+      "userSymbol": "Docs",
+      "serviceId": "docs",
+      "version": "v1"
+    }, {
+      "userSymbol": "Sheets",
+      "serviceId": "sheets",
+      "version": "v4"
+    }],
+    "libraries": [{
+      "userSymbol": "wbLib",
+      "libraryId": "1oLToj6noRZvFkLNP3-0vWRK1BJNHO9bie3gAHi81qSF3vWrlJMOTRFzG",
+      "version": "9"
+    }]
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
